<resources>
    <string name="app_name">MATE</string>
    <string name="project_title">Your Project Name</string>
    <string name="project_caption">We\'ll use this to name your project. You can always change it later.</string>
    <string name="user_title">Create your Account</string>
    <string name="username_hint">Username</string>
    <string name="create_user_caption">Create your unique Username and Password!</string>
    <string name="email_title">Email Address</string>
    <string name="email_caption">We suggest using your work email if you\'re creatin a team for your business, department, or project.</string>
    <string name="login_btn">Login</string>
    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="signin_btn">Sign In</string>
    <string name="reminder_btn">Reminder</string>
    <string name="password_hint">Password</string>
    <string name="forget_caption"><u>Forgot Password?</u></string>
    <string name="welcome_caption">Welcome to MATE !</string>
    <string name="welcome_subcaption">Manage your teamate with this Apps!</string>
    <string name="project_text">New Project</string>
    <string name="logo_text">Logo</string>
    <string name="typing">Typing</string>
    <string name="reminder_caption">We will send your list project to your email!</string>
    <string name="reminder_title">Reminder Project</string>
    <string name="send_btn">Send</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_card">Card board</string>
    <string name="action_search">Card board</string>
    <!-- HomeActivity -->
    <string name="home">Home</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="section_format">Search page recent: %1$d</string>
    <!-- SearchActivity -->
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">#General</string>
    <string name="_07_20">07:20</string>
    <string name="_07_25">07:25</string>
    <string name="_15_38">15:38</string>
    <string name="_15_40">15:40</string>
    <string name="adit">Adit</string>
    <string name="fazrian">Fazrian</string>
    <string name="gimana_nih_tugas_proposal_sudah_selesai">Gimana nih, tugas proposal sudah selesai?</string>
    <string name="january_28th_2017">January 28th, 2017</string>
    <string name="jod_progress_kamu_sudah_sampai_mana">Jod, progress kamu sudah sampai mana?</string>
    <string name="ramzy">Ramzy</string>
    <string name="sudah_70_dari_total_kerjaan_jri">Sudah 70% dari total kerjaan jri</string>
    <string name="sudah_bro_ini_saya_upload">Sudah bro ini saya upload</string>
    <string name="ziady">Ziady</string>
    <string name="menambahkan_sebuah_pdf">menambahkan sebuah PDF</string>
    <string name="bergabung_di_general"><i>Bergabung di #general</i></string>
    <string name="mufid">Mufid</string>
    <string name="_07_27">07:27</string>
</resources>
