<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ziterz.mate.welcome">

    <Button
        android:text="@string/signin_btn"
        android:onClick="openMainview"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:id="@+id/button"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/welcome_caption"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/textView"
        android:layout_above="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="112dp" />

    <TextView
        android:text="@string/welcome_subcaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginRight="51dp"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="35dp" />

    <Button
        android:text="@string/project_caption"
        android:onClick="openCreateP"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:id="@+id/button2"
        android:textColor="@color/colorBackground"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView4"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:contentDescription="@string/logo_text" />

</RelativeLayout>
