<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.ziterz.mate.LoginActivity">

    <ImageView
        android:layout_width="151dp"
        android:layout_height="148dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_marginTop="87dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_text" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/form_margin"
        android:id="@+id/create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:textColorHint="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="@dimen/form_margin"
            android:id="@+id/editText3"
            android:textSize="@dimen/text_size_input"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:hint="@string/username_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:textColorHint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="@dimen/input_margin"
            android:id="@+id/edittextpassword"
            android:textSize="@dimen/text_size_input"
            android:textColor="@color/white"
            android:hint="@string/password_hint"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_forget"
        android:text="@string/forget_caption"
        android:layout_gravity="center"
        android:onClick="ForgotToast"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:text="@string/login_btn"
            android:onClick="OpenChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signin_btn1"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorBackground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/divider"
            android:layout_alignEnd="@+id/divider"/>


        <View android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/back_btn"
            android:onClick="CloseLoginView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/text_size_button"
            android:textColor="@color/colorBackground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/divider"
            android:layout_alignStart="@+id/divider"/>

    </RelativeLayout>
</LinearLayout>
