<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_creaateproject"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ziterz.mate.ReminderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title"
        android:textSize="@dimen/text_size_tagline"
        android:textColor="@color/white"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/form_margin"
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:textColorHint="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="@dimen/form_margin"
            android:id="@+id/editText2"
            android:textSize="@dimen/text_size_input"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:hint="@string/email_title"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/reminder_caption"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_caption"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/text_medium_margin"/>
        <Button
            android:text="@string/send_btn"
            android:onClick="ReminderToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:textColor="@color/colorBackground"
            android:backgroundTint="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
